# 3DEngine

./: .gitignore  CMakeLists.txt  README.md  mingw-w64-x86_64.cmake
src/: Makefile  main.cpp  pch.h
src/engine/: engine.cpp  engine.h
src/engine/drawing/: drawing.hpp
src/engine/drawing/fonts/: fonts.hpp
src/types/: utility.hpp
src/types/color/: color4.h
src/types/font/: font.h
src/types/game/camera/: camera.cpp  camera.h
src/types/game/objects/: gameobject.h
src/types/game/objects/shapes/: cube.h
src/types/game/raycast/: raycast.h
src/types/game/transform/: transform.h
src/types/matrix/: matrix4x4.h
src/types/texture/: font_texture.h
src/types/vec/: bound.h  draw_data.h  quat.h  rect.h  vec2.h  vec3.h  vec4.h
win-build/: Makefile
